# libimageio

./: .gitignore  Android.mk  LICENSE  Makefile.am  README.md  configure.ac  imageio.pc.in
lib/: LICENSE
projects/msvs/: libimageio.sln  libimageio.vcxproj  libimageio.vcxproj.filters
projects/visual-studio/: libimageio.vcxproj
projects/xcode/libimageio.xcodeproj/: project.pbxproj
projects/xcode/libimageio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libimageio.xcodeproj/project.xcworkspace/xcshareddata/: libimageio.xccheckout
projects/xcode/libimageio.xcodeproj/project.xcworkspace/xcuserdata/joe.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libimageio.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libimageio.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: xcschememanagement.plist
projects/xcode/libimageio.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Makefile.am  blending.h  charts.c  charts.h  imageio.c  imageio.h
tests/: Makefile.am  blend.c  charts.c  drawing.c  img2c.c  rgb2bgr.c  test-imageio.c  test-png.c  test.c
