
# Add new files in alphabetical order. Thanks.
libimageio_src = imageio.c

# Add new files in alphabetical order. Thanks.
libimageio_headers = imageio.h blending.h

library_includedir      = $(includedir)/libimageio/
library_include_HEADERS = $(libimageio_headers)

# Library
lib_LTLIBRARIES                           = $(top_builddir)/lib/libimageio.la 
__top_builddir__lib_libimageio_la_SOURCES = $(libimageio_src)
__top_builddir__lib_libimageio_la_LIBADD  = 

